@@ -10,6 +10,7 @@ Bugs fixed
 * #2902: jsdump.loads fails to load search index if keywords starts with
   underscore
 * #2900: Fix epub content.opf: add auto generated orphan files to spine.
+* #2899: Fix ``hasdoc()`` function in Jinja2 template. It can detect ``genindex``, ``search`` collectly.
 
 Release 1.4.6 (released Aug 20, 2016)
 =====================================
